tests/src/frontend/syntax/invalid/constant_missing_type.sk
class C {} {
  const TID = 0;
}

fun main(): String {
  ""
}
